GNOME Bugzilla – Bug 737762
baseparse: leaks caps in gst_base_parse_process_streamheader
Last modified: 2014-10-03 11:43:36 UTC
Created attachment 287561 [details] [review] Patch .
commit 5e8b4bf085180f7a4c7ae6ec0f525baeaedd4df8 Author: Matej Knopp <matej.knopp@gmail.com> Date: Thu Oct 2 03:30:24 2014 +0200 baseparse: don't leak caps in gst_base_parse_process_streamheader https://bugzilla.gnome.org/show_bug.cgi?id=737762
I have reverted this commit c78a1b111ce48fb1c161d4f4e7ed445e10ef1309 Author: Tim-Philipp Müller <tim@centricular.com> Date: Fri Oct 3 09:01:15 2014 +0100 Revert "baseparse: don't leak caps in gst_base_parse_process_streamheader" This reverts commit 5e8b4bf085180f7a4c7ae6ec0f525baeaedd4df8. This causes refcounting criticals in the baseparse unit test.
Comment on attachment 287561 [details] [review] Patch Note that the patch might be right, but exposing a bug elsewhere. I did not investigate. But it clearly breaks stuff.
Looks like gst_parser_tester_set_sink_caps takes ownershp of the caps, which it probably shouldn't.
Created attachment 287663 [details] [review] baseparse set_sink_caps shouldn't take ownership of the caps This fixes the test.
Bug in the unit test as you say, thanks for investigating! commit d8aac32c787c8896a92224c6ac47a1a439dc579a Author: Matej Knopp <matej.knopp@gmail.com> Date: Thu Oct 2 03:30:24 2014 +0200 baseparse: don't leak caps in gst_base_parse_process_streamheader https://bugzilla.gnome.org/show_bug.cgi?id=737762 commit c497f629bc75aa04c426afe7124d9da078b3599d Author: Matej Knopp <matej.knopp@gmail.com> Date: Fri Oct 3 13:14:25 2014 +0200 tests: baseparse: set_sink_caps vfunc should't take ownership of the caps https://bugzilla.gnome.org/show_bug.cgi?id=737762