baseparse: don't leak caps in gst_base_parse_process_streamheader

https://bugzilla.gnome.org/show_bug.cgi?id=737762